--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>2.3.3.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.1-jre</version>
+        </dependency>
+
     </dependencies>
 
     <build>
